--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Mi Yan</title>
+  <title>Yinan Deng</title>
   
-  <meta name="author" content="Mi Yan">
+  <meta name="author" content="Yinan Deng">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -17,19 +17,19 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Mi Yan | 严汨</name>
+                <name>Yinan Deng | 邓一楠</name>
               </p>
               <p>
-                I am a first-year PhD student in Peking University, advised by Prof. <a href="https://hughw19.github.io/">He Wang</a>. I'm also an intern at the Embodied AI center of <a href="https://www.baai.ac.cn/">Beijing Academy of Artificial Intelligence</a>. Previously, I received my Bachelor degree from Turing Class, Peking University in 2023.
+		I am a third year master's degree student at Beijing Institute of Technology under the supervision of Prof.<a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">Yufeng Yue</a>. Previously, I received my Bachelor's Degree in Automation from Beijing Institute of Technology in 2021.
               </p>
               </p>
               <p style="text-align:center">
-                <a href="mailto:dorisyan@pku.edu.cn">Email</a> &nbsp/&nbsp
-                <a href="https://github.com/MiYanDoris">Github</a>
+                <a href="dengyinan@bit.edu.cn">Email</a> &nbsp/&nbsp
+                <a href="https://github.com/BIT-DYN">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/miyan.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/miyan.png" class="hoverZoomLink"></a>
+              <a href="images/dengyinan.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/dengyinan.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -45,100 +45,29 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-          <tr>
-            <td style="padding:10px;width:40%;vertical-align:middle">
-              <video style="width:100%;height:100%;object-fit:fill" id="main-video" autobuffer muted autoplay loop controls>
-                <source src="videos/maskcluster.mp4" type="video/mp4">
-              </video>
-            </td>
-            <td style="padding:20px;width:40%;vertical-align:middle">
-              <papertitle>MaskClustering: View Consensus based Mask Graph Clustering for Open-Vocabulary 3D Instance Segmentation</papertitle>
-              <br>
-              <strong>Mi Yan</strong>,
-              <a href="https://jzhzhang.github.io/">Jiazhao Zhang</a>,
-              <a>Yan Zhu</a>,
-              <a href="https://hughw19.github.io/">He Wang</a>
-              <br>
-              <em>CVPR 2024</em>
-              <br>
-              <a href="https://arxiv.org/abs/2401.07745">[Arxiv]</a> 
-              <a href="https://github.com/PKU-EPIC/MaskClustering">[Code]</a> 
-              <a href="https://pku-epic.github.io/MaskClustering/">[Project page]</a>
-              <p></p>
-            </td>
-         </tr>
+
           
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
-              <img src='images/AZHP.png' width="100%">
+              <img src='images/macim.png' width="100%">
             </td>
             <td style="padding:20px;width:70%;vertical-align:middle">
-              <papertitle>Adaptive Zone-aware Hierarchical Planner for Vision-Language Navigation</papertitle>
+              <papertitle>MACIM: Multi-Agent Collaborative Implicit Mapping</papertitle>
               <br>
-              <a href="https://chengaopro.github.io/"> Chen Gao</a>,
-              <a> Xingyu Peng</a>,
-              <strong>Mi Yan</strong>,
-              <a href="https://hughw19.github.io/">He Wang</a>
-              <a>Lirong Yang</a>,
-              <a>Haibing Ren</a>, 
-              <a>Hongsheng Li</a>, 
-              <a href="https://sites.google.com/site/siliuhome">Si Liu</a>         
+	      <strong>Yinan Deng</strong>,
+              <a> Yujie Tang</a>,
+              <a>Yi Yang</a>,
+              <a>Danwei Wang</a>,
+              <a>Yufeng Yue</a>,
               <br>
-              <em>CVPR 2023</em>
+              <em>RAL 2024</em>
               <br>
-              <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Gao_Adaptive_Zone-Aware_Hierarchical_Planner_for_Vision-Language_Navigation_CVPR_2023_paper.pdf">[Paper]</a> 
-              <a href="https://github.com/chengaopro/azhp">[Code]</a> 
-              <p></p>
-            </td>
-         </tr>
-          
-          <tr>
-            <td style="padding:10px;width:40%;vertical-align:middle">
-              <img src='images/hoi.png' width="100%">
-            </td>
-            <td style="padding:20px;width:70%;vertical-align:middle">
-              <papertitle>Tracking and Reconstructing Hand Object Interactions from Point Cloud Sequences in the Wild</papertitle>
-              <br>
-              <strong>Mi Yan*</strong>,
-              <a href="https://jychen18.github.io/"> Jiayi Chen*</a>,
-              Jiazhao Zhang</a>,
-              Yinzhen Xu</a>,
-              <a href="https://dragonlong.github.io/"> Xiaolong Li</a>,
-              <a href="https://yijiaweng.github.io/">Yijia Weng</a>,
-              <a href="https://ericyi.github.io/">Li Yi</a>,
-              <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>,                    
-              <a href="https://hughw19.github.io/">He Wang</a>
-              <br>
-              <em>AAAI 2023 (<font color="red">Oral Presentation</font>)</em>
-              <br>
-              <a href="https://arxiv.org/abs/2209.12009">[Arxiv]</a> 
-              <a href="https://github.com/PKU-EPIC/HOTrack">[Code]</a> 
-              <a href="https://pku-epic.github.io/HOtrack/">[Project page]</a>
+              <a href="https://ieeexplore.ieee.org/document/10476626">[IEEE]</a> 
+              <a href="https://github.com/BIT-DYN/MACIM">[Code]</a> 
               <p></p>
             </td>
          </tr>
 
-         <tr>
-            <td style="padding:10px;width:30%;vertical-align:middle">
-              <img src='images/domain_adaptation.png' width="100%">
-            </td>
-            <td style="padding:20px;width:70%;vertical-align:middle">
-              <papertitle>Domain Adaptation on Point Clouds via Geometry-Aware Implicit</papertitle>
-              <br>
-              <a href="http://yuefanshen.net">Yuefan Shen</a>,
-              <a href="https://yanchaoyang.github.io/">Yanchao Yang</a>, 
-              <strong>Mi Yan</strong>, 
-              <a href="https://hughw19.github.io/">He Wang</a>, 
-              <a href="http://www.youyizheng.net/">YouYi Zheng</a>, 
-              <a href="https://geometry.stanford.edu/member/guibas/">Leonidas Guibas</a>
-              <br>
-              <em>CVPR</em>, 2022
-              <br>
-              <a href="https://arxiv.org/pdf/2112.09343.pdf">[Paper]</a>
-              <a href="https://github.com/Jhonve/ImplicitPCDA">[Code]</a>
-            </td>
-         </tr>
-        </tbody></table>
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
