--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
               </p>
               </p>
               <p style="text-align:center">
-                <a href="dengyinan@bit.edu.cn">Email</a> &nbsp/&nbsp
+                <a href="mailto:dengyinan@bit.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/BIT-DYN">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/dengyinan.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/dengyinan.png" class="hoverZoomLink"></a>
+              <a href="images/dengyinan.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/dengyinan.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -119,16 +119,7 @@
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
             <p>
-              <li>TA of course <a href="https://pku-epic.github.io/Intro2CV_2024/">Introduction to computer vision 2024</a></li>
-            </p>
-            <p>
-              <li>CVPR 2024 Reviewer</li>
-            </p>
-            <p>
-              <li>TA of course <a href="https://hughw19.github.io/Intro2CV_23Spring/">Introduction to computer vision 2023</a></li>
-            </p>
-            <p>
-              <li>CVPR 2023 Reviewer</li>
+              <li>IROS 2023 Reviewer</li>
             </p>
           </td>
         </tr>
@@ -140,31 +131,31 @@
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
             <p>
-              <li>2023: Presidential Scholarship</li>
+              <li>2023: Triple A students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2022: SenseTime Scholarship</li>
+              <li>2022: National Scholarship, China </li>
             </p>
             <p>
-              <li>2022: Peking University Triple-A student</li>
+              <li>2021: Outstanding Graduate, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2021: Peking University Research Excellence Award</li>
+              <li>2020: Triple A students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2020: Google Women Techmaker Scholarship</li>
+              <li>2019: Divine Scholarship</li>
             </p>
             <p>
-              <li>2020: Peking University Triple-A student</li>
+              <li>2019: National Scholarship, China </li>
             </p>
             <p>
-              <li>2019: Top ten leading student in Hangzhou Xuejun High school </li>
+              <li>2018: Triple A students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2018: First prize in National Mathematical Olympiad, Zhejiang Province </li>
+              <li>2017: Triple A students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2017: First prize in National Mathematical Olympiad, Zhejiang Province </li>
+              <li>2015: Triple A students, Hebei Province </li>
             </p>
             
           </td>
