--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <name>Yinan Deng | 邓一楠</name>
               </p>
               <p>
-		I am a third year master's degree student at Beijing Institute of Technology under the supervision of Prof.<a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">Yufeng Yue</a>. Previously, I received my Bachelor's Degree in Automation from Beijing Institute of Technology in 2021.
+		I am a third year master's degree student at Beijing Institute of Technology under the supervision of Prof. <a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">Yufeng Yue</a>. Previously, I received my Bachelor's Degree in Automation from Beijing Institute of Technology in 2021.
               </p>
               </p>
               <p style="text-align:center">
@@ -29,7 +29,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/dengyinan.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/dengyinan.jpg" class="hoverZoomLink"></a>
+              <a href="images/dengyinan.jpg"><img style="width:50%;max-width:100%" alt="profile photo" src="images/dengyinan.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -67,6 +67,138 @@
               <p></p>
             </td>
          </tr>
+
+
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/see-csom.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>SEE-CSOM: Sharp-Edged and Efficient Continuous Semantic Occupancy Mapping for Mobile Robots</papertitle>
+              <br>
+	      <strong>Yinan Deng</strong>,
+              <a> Meiling Wang</a>,
+              <a>Yi Yang</a>,
+              <a>Danwei Wang</a>,
+              <a>Yufeng Yue</a>,
+              <br>
+              <em>TIE 2024</em>
+              <br>
+              <a href=https://ieeexplore.ieee.org/document/10093797">[IEEE]</a> 
+              <a href="https://github.com/BIT-DYN/SEE-CSOM">[Code]</a> 
+              <p></p>
+            </td>
+         </tr>
+
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/HORCL.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>Multi-View Robust Collaborative Localization in High Outlier Ratio Scenes Based on Semantic Features</papertitle>
+              <br>
+	      <a>Yujie Tang</a>,
+              <a> Meiling Wang</a>,
+	      <strong>Yinan Deng</strong>,
+              <a>Yi Yang</a>,
+              <a>Ziquan Lan</a>,
+              <a>Yufeng Yue</a>,
+              <br>
+              <em>IROS 2023</em>
+              <br>
+              <a href=https://ieeexplore.ieee.org/abstract/document/10342524">[IEEE]</a> 
+              <a href="https://github.com/BIT-TYJ/HORCL">[Code]</a> 
+              <p></p>
+            </td>
+         </tr>
+
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/ssgm.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>SSGM: Spatial Semantic Graph Matching for Loop Closure Detection in Indoor Environments</papertitle>
+              <br>
+	      <a>Yujie Tang</a>,
+              <a> Meiling Wang</a>,
+	      <strong>Yinan Deng</strong>,
+              <a>Yi Yang</a>,
+              <a>Yufeng Yue</a>,
+              <br>
+              <em>IROS 2023</em>
+              <br>
+              <a href=https://ieeexplore.ieee.org/abstract/document/10342317">[IEEE]</a> 
+              <a href="https://github.com/BIT-TYJ/SSGM">[Code]</a> 
+              <p></p>
+            </td>
+         </tr>
+
+
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/ssgm.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>GACF: Ground-Aerial Collaborative Framework for Large-Scale Emergency Rescue Scenarios</papertitle>
+              <br>
+	      <a>Yuxiao Zhang</a>,
+              <a> Jing Yu</a>, 
+              <a>Yujie Tang</a>,
+	      <strong>Yinan Deng</strong>,
+              <a>Xinyu Tian</a>,
+              <a>Yufeng Yue</a>,
+              <a>Yi Yang</a>,
+              <br>
+              <em>IROS 2023</em>
+              <br>
+              <a https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> \
+              <p></p>
+            </td>
+         </tr>
+
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/hd-ccsom.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>HD-CCSOM: Hierarchical and Dense Collaborative Continuous Semantic Occupancy Mapping through Label Diffusion</papertitle>
+              <br>
+	      <strong>Yinan Deng</strong>,
+              <a> Meiling Wang</a>,
+              <a>Yi Yang</a>,
+              <a>Yufeng Yue</a>,
+              <br>
+              <em>IROS 2022</em>
+              <br>
+              <a href=https://ieeexplore.ieee.org/abstract/document/9981756">[IEEE]</a> 
+              <a href="https://github.com/BIT-DYN/HD-CCSOM">[Code]</a> 
+              <p></p>
+            </td>
+         </tr>
+
+
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/hd-ccsom.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>S-MKI: Incremental Dense Semantic Occupancy Reconstruction Through Multi-Entropy Kernel Inference</papertitle>
+              <br>
+	      <strong>Yinan Deng</strong>,
+              <a> Meiling Wang</a>,
+              <a>Danwei Wang</a>,
+              <a>Yufeng Yue</a>,
+              <br>
+              <em>IROS 2022</em>
+              <br>
+              <a href=https://ieeexplore.ieee.org/abstract/document/9982101">[IEEE]</a> 
+              <p></p>
+            </td>
+         </tr>
+
+
+
+
 
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
