--- a/index.html
+++ b/index.html
@@ -46,6 +46,29 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/opengraph.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>MACIM: Multi-Agent Collaborative Implicit Mapping</papertitle>
+              <br>
+	      <strong>Yinan Deng</strong>,
+              <a> Jiahui Wang</a>,
+              <a> Jingyu Zhao</a>,
+              <a> Xinyu Tian</a>,
+              <a> Guangyan Chen</a>,
+              <a>Yi Yang</a>,
+              <a>Yufeng Yue</a>,
+              <br>
+              <em>Arxiv 2024</em>
+              <br>
+              <a href="https://arxiv.org/abs/2403.09412">[Arxiv]</a> 
+              <a href="https://github.com/BIT-DYN/OpenGraph">[Code]</a> 
+              <p></p>
+            </td>
+         </tr>
+
           
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
@@ -136,7 +159,7 @@
 
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
-              <img src='images/ssgm.jpg' width="100%">
+              <img src='images/GACF.jpg' width="100%">
             </td>
             <td style="padding:20px;width:70%;vertical-align:middle">
               <papertitle>GACF: Ground-Aerial Collaborative Framework for Large-Scale Emergency Rescue Scenarios</papertitle>
@@ -179,7 +202,7 @@
 
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
-              <img src='images/hd-ccsom.jpg' width="100%">
+              <img src='images/s-mki.jpg' width="100%">
             </td>
             <td style="padding:20px;width:70%;vertical-align:middle">
               <papertitle>S-MKI: Incremental Dense Semantic Occupancy Reconstruction Through Multi-Entropy Kernel Inference</papertitle>
