--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <b>Beijing Institute of Technology</b>, China
               <br> 2023.09 - Now
               <br> <strong>PhD Student</strong>
-              <br> Research Advisor: Prof. <a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">He Wang</a>
+              <br> Research Advisor: Prof. <a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">Yufeng Yue</a>
               
             </td>
           </tr>
