--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <img src='images/opengraph.jpg' width="100%">
             </td>
             <td style="padding:20px;width:70%;vertical-align:middle">
-              <papertitle>MACIM: Multi-Agent Collaborative Implicit Mapping</papertitle>
+              <papertitle>OpenGraph: Open-Vocabulary Hierarchical 3D Graph Representation in Large-Scale Outdoor Environments</papertitle>
               <br>
 	      <strong>Yinan Deng</strong>,
               <a> Jiahui Wang</a>,
