--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
             <p>
-              <li>2023: Triple A students, Beijing Institute of Technology </li>
+              <li>2023: Outstanding Students, Beijing Institute of Technology </li>
             </p>
             <p>
               <li>2022: National Scholarship, China </li>
@@ -295,7 +295,7 @@
               <li>2021: Outstanding Graduate, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2020: Triple A students, Beijing Institute of Technology </li>
+              <li>2020: Outstanding Students, Beijing Institute of Technology </li>
             </p>
             <p>
               <li>2019: Divine Scholarship</li>
@@ -304,13 +304,13 @@
               <li>2019: National Scholarship, China </li>
             </p>
             <p>
-              <li>2018: Triple A students, Beijing Institute of Technology </li>
+              <li>2018: Outstanding Students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2017: Triple A students, Beijing Institute of Technology </li>
+              <li>2017: Outstanding Students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2015: Triple A students, Hebei Province </li>
+              <li>2015: Outstanding Students, Hebei Province </li>
             </p>
             
           </td>
