--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
               <a>Yufeng Yue</a>,
               <a>Yi Yang</a>,
               <br>
-              <em>IROS 2023</em>
+              <em>ICUS 2023</em>
               <br>
-              <a https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> \
+              <a https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> 
               <p></p>
             </td>
          </tr>
