--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
               <br>
               <em>IROS 2022</em>
               <br>
+              <a href=https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9981756>[Paper]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/9981756">[IEEE]</a> 
               <a href="https://github.com/BIT-DYN/HD-CCSOM">[Code]</a> 
               <p></p>
