--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <br>
               <em>IROS 2022</em>
               <br>
-              <a href=https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9981756>[Paper]</a> 
+              <a href=https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9981756>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/9981756">[IEEE]</a> 
               <a href="https://github.com/BIT-DYN/HD-CCSOM">[Code]</a> 
               <p></p>
@@ -215,6 +215,7 @@
               <br>
               <em>IROS 2022</em>
               <br>
+              <a href=https://drive.google.com/file/d/16fpqzUqQAHrn9fpw3qczrCvaX6Hfaisz/view?pli=1>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/9982101">[IEEE]</a> 
               <p></p>
             </td>
