--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               <br>
               <em>Arxiv 2024</em>
               <br>
+              <a href=https://arxiv.org/pdf/2403.09412.pdf>[PDF]</a> 
               <a href="https://arxiv.org/abs/2403.09412">[Arxiv]</a> 
               <a href="https://github.com/BIT-DYN/OpenGraph">[Code]</a> 
               <p></p>
@@ -85,6 +86,7 @@
               <br>
               <em>RAL 2024</em>
               <br>
+              <a href=https://drive.google.com/file/d/1Y0tJIY4uLdCNG98D8oiAl4SN65uC9Aff/view>[PDF]</a> 
               <a href="https://ieeexplore.ieee.org/document/10476626">[IEEE]</a> 
               <a href="https://github.com/BIT-DYN/MACIM">[Code]</a> 
               <p></p>
@@ -107,6 +109,7 @@
               <br>
               <em>TIE 2024</em>
               <br>
+              <a href=https://drive.google.com/file/d/1vji6cXKYuk5F8sI14og4HjPpiCddPoaS/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/document/10093797">[IEEE]</a> 
               <a href="https://github.com/BIT-DYN/SEE-CSOM">[Code]</a> 
               <p></p>
