--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
               <br>
               <em>IROS 2023</em>
               <br>
+              <a href=https://drive.google.com/file/d/1tJfo73CLZdGeB0jxwlJei6UmEks6PU72/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/10342524">[IEEE]</a> 
               <a href="https://github.com/BIT-TYJ/HORCL">[Code]</a> 
               <p></p>
@@ -153,6 +154,7 @@
               <br>
               <em>IROS 2023</em>
               <br>
+              <a href=https://drive.google.com/file/d/17sVx9W4QnUkjaMr61PFwpuxzT1yml2uX/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/10342317">[IEEE]</a> 
               <a href="https://github.com/BIT-TYJ/SSGM">[Code]</a> 
               <p></p>
@@ -177,6 +179,7 @@
               <br>
               <em>ICUS 2023</em>
               <br>
+              <a href=https://drive.google.com/file/d/11aZzIfDucUh1hml2ibMHnEq5nx34NWko/view?usp=drive_link>[PDF]</a> 
               <a https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> 
               <p></p>
             </td>
