--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <a>Danwei Wang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>RAL 2024</em>
+              <em>IEEE Robotics and Automation Letters (RAL) 2024</em>
               <br>
               <a href=https://drive.google.com/file/d/1Y0tJIY4uLdCNG98D8oiAl4SN65uC9Aff/view>[PDF]</a> 
               <a href="https://ieeexplore.ieee.org/document/10476626">[IEEE]</a> 
@@ -107,7 +107,7 @@
               <a>Danwei Wang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>TIE 2024</em>
+              <em>IEEE Transactions on Industrial Electronics (TIE) 2024</em>
               <br>
               <a href=https://drive.google.com/file/d/1vji6cXKYuk5F8sI14og4HjPpiCddPoaS/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/document/10093797">[IEEE]</a> 
