--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
 
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
-              <img src='images/hd-ccsom.jpg' width="100%">
+              <video style="width:100%;height:100%;object-fit:fill" id="main-video" autobuffer muted autoplay loop controls>
+                <source src="videos/hd-ccsom.mp4" type="video/mp4">
+              </video>
             </td>
             <td style="padding:20px;width:70%;vertical-align:middle">
               <papertitle>HD-CCSOM: Hierarchical and Dense Collaborative Continuous Semantic Occupancy Mapping through Label Diffusion</papertitle>
@@ -209,7 +211,9 @@
 
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
-              <img src='images/s-mki.jpg' width="100%">
+              <video style="width:100%;height:100%;object-fit:fill" id="main-video" autobuffer muted autoplay loop controls>
+                <source src="videos/s-mki.mp4" type="video/mp4">
+              </video>
             </td>
             <td style="padding:20px;width:70%;vertical-align:middle">
               <papertitle>S-MKI: Incremental Dense Semantic Occupancy Reconstruction Through Multi-Entropy Kernel Inference</papertitle>
