--- a/index.html
+++ b/index.html
@@ -329,7 +329,9 @@
         </tr>
       </tbody></table>
 
-	<script type="text/javascript" id="mmvst_globe" src="//mapmyvisitors.com/globe.js?d=HkX4kiR2B_KdSvhR5e9__DtcJyXvG9_xqCTLoacLvoc"></script>
+	<div id="mmvst_globe_container" style="width: 200px; height: 200px;">
+    <script type="text/javascript" id="mmvst_globe" src="//mapmyvisitors.com/globe.js?d=HkX4kiR2B_KdSvhR5e9__DtcJyXvG9_xqCTLoacLvoc"></script>
+</div>
 
     
       </td>
