--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <style>
+    #mmvst_globe {
+        width: 300px; /* 设置地球的宽度 */
+        height: 300px; /* 设置地球的高度 */
+    }
+  </style>
+
 </head>
 
 <body>
