--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <name>Yinan Deng | 邓一楠</name>
               </p>
               <p>
-		I am a third year master's degree student at Beijing Institute of Technology under the supervision of Prof. <a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">Yufeng Yue</a>. Previously, I received my Bachelor's Degree in Automation from Beijing Institute of Technology in 2021.
+		I am a first-year PhD student at Beijing Institute of Technology under the supervision of Prof. <a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">Yufeng Yue</a>. Previously, I received my Bachelor's Degree in Automation from Beijing Institute of Technology in 2021.
               </p>
               </p>
               <p style="text-align:center">
