--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
+
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/openobj.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>OpenObj: Open-Vocabulary Object-Level Neural Radiance Fields with Fine-Grained Understanding</papertitle>
+              <br>
+	      <strong>Yinan Deng</strong>,
+              <a> Jiahui Wang</a>,
+              <a> Jingyu Zhao</a>,
+              <a> Jianyu Dou</a>,
+              <a>Yi Yang</a>,
+              <a>Yufeng Yue</a>,
+              <br>
+              <em>Arxiv 2024</em>
+              <br>
+              <a href=https://arxiv.org/pdf/2406.08009.pdf>[PDF]</a> 
+              <a href="https://arxiv.org/abs/2406.08009">[Arxiv]</a> 
+              <a href="https://github.com/BIT-DYN/OpenObj">[Code]</a> 
+              <a href="https://openobj.github.io/">[Project]</a> 
+              <p></p>
+            </td>
+         </tr>
+
+
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
               <img src='images/opengraph.jpg' width="100%">
@@ -77,6 +103,28 @@
             </td>
          </tr>
 
+
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/LGSDF.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>LGSDF: Continual Global Learning of Signed Distance Fields Aided by Local Updating</papertitle>
+              <br>
+              <a>Yufeng Yue</a>,
+	      <strong>Yinan Deng</strong>,
+              <a> Jiahui Wang</a>,
+              <a> Yi Yang</a>,
+              <br>
+              <em>(<strong>Arxiv</strong>) 2024</em>
+              <br>
+              <a href=https://arxiv.org/pdf/2404.05187>[PDF]</a> 
+              <a href="https://arxiv.org/abs/2404.05187">[Arxiv]</a> 
+              <a href="https://github.com/BIT-DYN/LGSDF">[Code]</a> 
+              <p></p>
+            </td>
+         </tr>
+
           
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
@@ -91,7 +139,7 @@
               <a>Danwei Wang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IEEE Robotics and Automation Letters (RAL) 2024</em>
+              <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
               <a href=https://drive.google.com/file/d/1Y0tJIY4uLdCNG98D8oiAl4SN65uC9Aff/view>[PDF]</a> 
               <a href="https://ieeexplore.ieee.org/document/10476626">[IEEE]</a> 
@@ -114,7 +162,7 @@
               <a>Danwei Wang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IEEE Transactions on Industrial Electronics (TIE) 2024</em>
+              <em>IEEE Transactions on Industrial Electronics (<strong>TIE</strong>) 2024</em>
               <br>
               <a href=https://drive.google.com/file/d/1vji6cXKYuk5F8sI14og4HjPpiCddPoaS/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/document/10093797">[IEEE]</a> 
@@ -137,7 +185,7 @@
               <a>Ziquan Lan</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IROS 2023</em>
+              <em>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2023</em>
               <br>
               <a href=https://drive.google.com/file/d/1tJfo73CLZdGeB0jxwlJei6UmEks6PU72/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/10342524">[IEEE]</a> 
@@ -159,7 +207,7 @@
               <a>Yi Yang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IROS 2023</em>
+              <em>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2023</em>
               <br>
               <a href=https://drive.google.com/file/d/17sVx9W4QnUkjaMr61PFwpuxzT1yml2uX/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/10342317">[IEEE]</a> 
@@ -184,7 +232,7 @@
               <a>Yufeng Yue</a>,
               <a>Yi Yang</a>,
               <br>
-              <em>ICUS 2023</em>
+              <em>IEEE International Conference on Unmanned Systems (<strong>ICUS</strong>) 2023</em>
               <br>
               <a href=https://drive.google.com/file/d/11aZzIfDucUh1hml2ibMHnEq5nx34NWko/view?usp=drive_link>[PDF]</a> 
               <a https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> 
@@ -206,7 +254,7 @@
               <a>Yi Yang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IROS 2022</em>
+              <em>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2022</em>
               <br>
               <a href=https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9981756>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/9981756">[IEEE]</a> 
@@ -230,7 +278,7 @@
               <a>Danwei Wang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IROS 2022</em>
+              <em>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2022</em>
               <br>
               <a href=https://drive.google.com/file/d/16fpqzUqQAHrn9fpw3qczrCvaX6Hfaisz/view?pli=1>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/9982101">[IEEE]</a> 
@@ -293,7 +341,7 @@
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
             <p>
-              <li>IROS 2023 Reviewer</li>
+              <li>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2023 Reviewer</li>
             </p>
           </td>
         </tr>
