--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <a>Yi Yang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>Arxiv 2024</em>
+              <em><strong>Arxiv</strong> 2024</em>
               <br>
               <a href=https://arxiv.org/pdf/2406.08009.pdf>[PDF]</a> 
               <a href="https://arxiv.org/abs/2406.08009">[Arxiv]</a> 
@@ -94,7 +94,7 @@
               <a>Yi Yang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>Arxiv 2024</em>
+              <em><strong>Arxiv</strong> 2024</em>
               <br>
               <a href=https://arxiv.org/pdf/2403.09412.pdf>[PDF]</a> 
               <a href="https://arxiv.org/abs/2403.09412">[Arxiv]</a> 
@@ -116,7 +116,7 @@
               <a> Jiahui Wang</a>,
               <a> Yi Yang</a>,
               <br>
-              <em>(<strong>Arxiv</strong>) 2024</em>
+              <em><strong>Arxiv</strong> 2024</em>
               <br>
               <a href=https://arxiv.org/pdf/2404.05187>[PDF]</a> 
               <a href="https://arxiv.org/abs/2404.05187">[Arxiv]</a> 
