--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <a>Yi Yang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em><strong>Arxiv</strong> 2024</em>
+              <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
               <a href=https://arxiv.org/pdf/2403.09412.pdf>[PDF]</a> 
               <a href="https://arxiv.org/abs/2403.09412">[Arxiv]</a> 
