--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:dengyinan@bit.edu.cn">Email</a> &nbsp/&nbsp
-                <a href="https://github.com/BIT-DYN">Github</a>
+                <a href="https://github.com/BIT-DYN">Github</a> &nbsp/&nbsp
+<a href="https://scholar.google.com/citations?user=GdzvUH0AAAAJ&hl=zh-CN&oi=ao">Google Scholar</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
