--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <a>Ziquan Lan</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2023</em>
+              <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2023</em>
               <br>
               <a href=https://drive.google.com/file/d/1tJfo73CLZdGeB0jxwlJei6UmEks6PU72/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/10342524">[IEEE]</a> 
@@ -208,7 +208,7 @@
               <a>Yi Yang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2023</em>
+              <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2023</em>
               <br>
               <a href=https://drive.google.com/file/d/17sVx9W4QnUkjaMr61PFwpuxzT1yml2uX/view?usp=drive_link>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/10342317">[IEEE]</a> 
@@ -255,7 +255,7 @@
               <a>Yi Yang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2022</em>
+              <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2022</em>
               <br>
               <a href=https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9981756>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/9981756">[IEEE]</a> 
@@ -279,7 +279,7 @@
               <a>Danwei Wang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2022</em>
+              <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2022</em>
               <br>
               <a href=https://drive.google.com/file/d/16fpqzUqQAHrn9fpw3qczrCvaX6Hfaisz/view?pli=1>[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/9982101">[IEEE]</a> 
@@ -342,7 +342,16 @@
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
             <p>
-              <li>IEEE/RSJ International Conference on Intelligent Robots & Systems (<strong>IROS</strong>) 2023 Reviewer</li>
+              <li>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2023 Reviewer</li>
+            </p>
+            <p>
+              <li>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2023 Reviewer</li>
+            </p>
+            <p>
+              <li>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2024 Reviewer</li>
+            </p>
+            <p>
+              <li>IEEE/RSJ ‌International Conference on Robotics and Automation (<strong>ICRA</strong>) 2024 Reviewer</li>
             </p>
           </td>
         </tr>
@@ -353,6 +362,9 @@
             <td><heading>Awards</heading></td>
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
+            <p>
+              <li>2023: Baosteel Education Scholarship </li>
+            </p>
             <p>
               <li>2023: Outstanding Students, Beijing Institute of Technology </li>
             </p>
