--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
             <p>
-              <li>2024 IEEE Student Member</li>
+              <li>IEEE Student Member</li>
             </p>
             <p>
-              <li>2024 RAS(IEEE Robotics and Automation Society) SSR(Sectional Student Representative) </li>
+              <li>Sectional Student Representative of RAS(IEEE Robotics and Automation Society)</li>
             </p>
           </td>
         </tr>
