--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <name>Yinan Deng | 邓一楠</name>
               </p>
               <p>
-		I am a first-year PhD student at Beijing Institute of Technology under the supervision of Prof. <a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">Yufeng Yue</a>. Previously, I received my Bachelor's Degree in Automation from Beijing Institute of Technology in 2021.
+		I am a second-year PhD student at Beijing Institute of Technology under the supervision of Prof. <a href="https://yfyue-bit.github.io/">Yufeng Yue</a>. Previously, I received my Bachelor's Degree in Automation from Beijing Institute of Technology in 2021.
               </p>
               </p>
               <p style="text-align:center">
@@ -46,7 +46,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-		Currently, my interest lies in the intesection of 3D vision and embodied AI. My research goal is to enable robot with the ability to percept and understand the 3D world, and to plan and execute tasks based on human intention.
+		Currently, my research focuses on the intersection of 3D vision and embodied AI. My goal is to equip robots with the ability to perceive and understand the 3D world, enabling them to plan and execute tasks based on human intentions.
               </p>
             </td>
           </tr>
@@ -381,7 +381,7 @@
               <b>Beijing Institute of Technology</b>, China
               <br> 2023.09 - Now
               <br> <strong>PhD Student</strong>
-              <br> Research Advisor: Prof. <a href="https://scholar.google.com/citations?user=7M_xficAAAAJ&hl=zh-CN&oi=ao">Yufeng Yue</a>
+              <br> Research Advisor: Prof. <a href="https://yfyue-bit.github.io/">Yufeng Yue</a>
               
             </td>
           </tr>
