--- a/index.html
+++ b/index.html
@@ -53,11 +53,28 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-
+<tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/lcp-fusion.png' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle> LCP-Fusion: A Neural Implicit SLAM with Enhanced Local Constraints and Computable Prior </papertitle>
+              <br>
+	      <a>Jiahui Wang</a >,
+	      <strong>Yinan Deng</strong>,
+	      <a>Yi Yang</a >,
+              <a>Yufeng Yue*</a>,
+              <br>
+              <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2024</em>
+              <br>
+	     <a href=https://arxiv.org/pdf/2411.03610>[PDF]</a > 
+              <p></p >
+            </td>
+         </tr>
 
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
-              <img src='images/openobj.jpg' width="100%">
+              <img src='images/openobj.gif' width="100%">
             </td>
             <td style="padding:20px;width:70%;vertical-align:middle">
               <papertitle>OpenObj: Open-Vocabulary Object-Level Neural Radiance Fields with Fine-Grained Understanding</papertitle>
@@ -320,7 +337,7 @@
               <li>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2024 Reviewer</li>
             </p>
             <p>
-              <li>IEEE/RSJ ‌International Conference on Robotics and Automation (<strong>ICRA</strong>) 2024 Reviewer</li>
+              <li>IEEE/RSJ International Conference on Robotics and Automation (<strong>ICRA</strong>) 2024 Reviewer</li>
             </p>
           </td>
         </tr>
